@@ -114,14 +114,23 @@ DatabaseServer::~DatabaseServer()
 
 void DatabaseServer::run()
 {
-    int waitTime = 1;
+    qint64 runningTime = 0;
+    int debugTime      = 0;
+    int waitTime       = 1;
 
     // Loop to wait for stopping the server.
 
     do
     {
-        qCDebug(DIGIKAM_DATABASESERVER_LOG) << "Waiting" << waitTime << "seconds...";
+        if (!debugTime)
+        {
+            qCDebug(DIGIKAM_DATABASESERVER_LOG) << "Running" << runningTime << "seconds...";
+            debugTime = 30;
+        }
+
         QThread::sleep(waitTime);
+        runningTime++;
+        debugTime--;
     }
     while (databaseServerStateEnum != stopped);
 
